--- a/services/patients/package.json
+++ b/services/patients/package.json
@@ -13,6 +13,7 @@
     "test": "vitest run"
   },
   "dependencies": {
+    "@app/common": "workspace:*",
     "dotenv": "^16.4.5",
     "express": "^4.19.2"
   },
