--- a/services/reporting/package.json
+++ b/services/reporting/package.json
@@ -15,8 +15,10 @@
   "dependencies": {
     "@app/common": "workspace:*",
     "@google-cloud/pubsub": "^4.8.0",
+    "@google-cloud/storage": "^7.7.0",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
