--- a/services/patients/package.json
+++ b/services/patients/package.json
@@ -14,8 +14,11 @@
   },
   "dependencies": {
     "@app/common": "workspace:*",
+    "@google-cloud/firestore": "^7.1.0",
+    "@google-cloud/storage": "^7.7.0",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
