--- a/services/auth/package.json
+++ b/services/auth/package.json
@@ -14,8 +14,12 @@
   },
   "dependencies": {
     "@app/common": "workspace:*",
+    "@google-cloud/firestore": "^7.1.0",
+    "bcrypt": "^5.1.1",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "dotenv": "^16.4.5"
+    "jsonwebtoken": "^9.0.2",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
