--- a/services/appointments/package.json
+++ b/services/appointments/package.json
@@ -17,11 +17,13 @@
     "@google-cloud/pubsub": "^4.8.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "pg": "^8.11.3",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.30",
+    "@types/pg": "^8.11.10",
     "eslint": "^9.10.0",
     "tsx": "^4.16.2",
     "typescript": "^5.5.4",
