--- a/services/auth/package.json
+++ b/services/auth/package.json
@@ -22,7 +22,9 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^20.11.30",
     "eslint": "^9.10.0",
     "tsx": "^4.16.2",
