--- a/services/auth/package.json
+++ b/services/auth/package.json
@@ -5,7 +5,9 @@
   "type": "module",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "build": "tsc -p tsconfig.json",
     "dev": "tsx watch src/index.ts",
@@ -15,7 +17,9 @@
   "dependencies": {
     "@app/common": "workspace:*",
     "@google-cloud/firestore": "^7.1.0",
+    "@types/cors": "^2.8.19",
     "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
