--- a/services/reporting/package.json
+++ b/services/reporting/package.json
@@ -5,7 +5,9 @@
   "type": "module",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "build": "tsc -p tsconfig.json",
     "dev": "tsx watch src/index.ts",
@@ -16,6 +18,8 @@
     "@app/common": "workspace:*",
     "@google-cloud/pubsub": "^4.8.0",
     "@google-cloud/storage": "^7.7.0",
+    "@types/cors": "^2.8.19",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "zod": "^3.23.8"
